Fixed The typeform, Changed the fonts , Added alignments , Made Schedule Part , Linked Buttons, Small alignments
Changes Worked on
->Made New Typeform and Linked it to my (Prabirs) Account
->Space added in what is cyber cypher "e.W"
->Contact Us is 1 email and 1 phone
->All Register Buttons should are linked to Register.html
->Made a register button for kuch toh one liner
->Added Schedule section and make it to be announced soon
->Maked NavBar font Visby/Breymont
Pending Changes
->fixing the svgs
IG we are good to go

--- a/public/main.css
+++ b/public/main.css
@@ -62,8 +62,8 @@ h1 {
 /* navbar */
 
 .nav-item {
-  font-family: "visby-regular";
-  font-style: normal;
+  font-family: "visby-bold";
+  font-style: bold;
   font-weight: 600;
   font-size: 24px;
   line-height: 37px;
@@ -109,6 +109,9 @@ h1 {
 
 .cybercypherheading {
   width: 50%;
+}
+.applynow{
+  
 }
 
 .applybtn {
@@ -369,10 +372,10 @@ h1 {
 }
 .footerregister {
   padding-top: 10px;
+  text-align:right;
   font-family: "visby-bold";
   font-size: bold;
   font-size: 1rem;
-  text-align: right;
   color: white;
 }
 .footer {
